Fixed a few final layout issues

--- a/app/assets/stylesheets/layouts/cant_decide.scss
+++ b/app/assets/stylesheets/layouts/cant_decide.scss
@@ -2,7 +2,7 @@
 @import "tzukuri/mixins";
 
 #cant-decide {
-  height: 400px;
+  height: 35vh;
   background-image: image-url('store/cant-decide-2.png');
   background-size: cover;
   background-position: center;
@@ -26,7 +26,7 @@
   }
 
   @media only screen and (max-width: $smartphone) {
-    height: 45vh;
+    height: 60vh;
 
     .container .content {
       width: 100%;
@@ -39,6 +39,8 @@
   }
 
   @media only screen and (max-width: $tabletLandscape) {
+    height: 55vh;
+
     button {
       width: 100%;
       &#try-on {
